cert-manager/Ingress_Demo.yaml
# Ingress_Demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dashboard-ingress
  namespace: kube-system
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - k8s.your.domain.edu.tw
    secretName: kubernetes-dashboard-tls
  rules:
  - host: k8s.your.domain.edu.tw
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
